<resources>
    <string name="app_name">ejemploRecyclerView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="titulo">Título</string>
    <string name="anio">Año</string>
    <string name="insertar">Insertar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="genero">Genero</string>
    <string name="bienvenida">Bienvenido al videoclub Amanecer</string>
</resources>