<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llDatos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llBotones"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genero"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etAnio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/anio"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llBotones"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/bInsertar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insertar" />

        <Button
            android:id="@+id/bEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar" />

        <Button
            android:id="@+id/bBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>